--- a/geogen.html
+++ b/geogen.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewpoint" content="width = device-width, initial-scale = 1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Citibike Angels Route Calculator</title>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
-  <script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.js"></script>
+<!--  <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-2.5.0.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.14.2/ui-bootstrap-tpls.min.js"></script>
 
   <script>
   angular.module('app', ['ui.bootstrap']).controller("Ctrl", function($scope, $http) {
@@ -66,40 +67,78 @@
   $scope.radioError = function(error) {
      $scope.location_available = 'false';
      alert('unable to get location: ' + error.message);
-
    }
+
+  $scope.changeSource = function(name) { $scope.sourceModel.value = name; }
+  $scope.changeDest   = function(name) { $scope.destModel.value   = name; }
+  $scope.toggleSourceBar = function()  { 
+    var x = document.getElementById("sourceNav");
+    if (x.className === "topnav") { x.className += " responsive"; }
+    else { x.className = "topnav"; }
+  }
+  $scope.closeSourceBar = function() {
+   document.getElementById("sourceNav").className="topnav";
+  }
+  $scope.toggleDestBar = function()  { 
+    var x = document.getElementById("destNav");
+    if (x.className === "topnav") { x.className += " responsive"; }
+    else { x.className = "topnav"; }
+  }
+  $scope.closeDestBar = function() {
+   document.getElementById("destNav").className="topnav";
+  }
  });
   </script>
-
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <div ng-controller="Ctrl">
-    <div class="container">
+    <div class="container" ng-init="get_places()">
       <div class="container"> <!-- navigation -->
-        <div class="row" ng-init="get_places()">
-          <p>Choose Source:</p>
+        <p>Choose Source:</p>
+        <div class="btn-group-justified nav-desktop">
+          <label class="btn btn-primary btn-lg" ng-model="sourceModel.value" ng-click="getCurrentLocation(); get_routes()" uib-btn-radio="'current location'">Current Location</label>
+          <label class="btn btn-primary btn-lg" ng-model="sourceModel.value" ng-click="get_routes()" uib-btn-radio="'{{item.name}}'" ng-repeat="item in places">{{item.name}}</label>
         </div>
-        <div class="row">
-          <div class="btn-group-justified">
-            <label class="btn btn-primary" ng-model="sourceModel.value" ng-click="getCurrentLocation(); get_routes()" uib-btn-radio="'current location'">Current Location</label>
-            <label class="btn btn-primary" ng-model="sourceModel.value" ng-click="get_routes()" uib-btn-radio="'{{item.name}}'" ng-repeat="item in places">{{item.name}}</label>
-          </div>
+        <div class="btn-group nav-mobile" uib-dropdown is-open="source-button.isopen">
+          <button id="source-button" type="button" class="btn btn-primary btn-lg" uib-dropdown-toggle ng-disabled="disabled">{{sourceModel.value}}<span class="caret"></span>
+          </button>
+          <ul class="uib-dropdown-menu" role="menu" aria-labelledby="source-button">
+            <li role="menutitem">
+              <a href="#" ng-click="changeSource('current location'); getCurrentLocation(); get_routes()">Current Location</a>
+              <a href="#" ng-click="changeSource(item.name); get_routes()" ng-repeat="item in places">{{item.name}}</a>
+            </li>
+          </ul>
         </div>
-        <div class="row">
-          <p>Choose Destination:</p>
+        <div class="topnav" id="sourceNav">
+           <a href="#" ng-click="changeSource('current location'); closeSourceBar(); getCurrentLocation(); get_routes()">Current Location</a>
+           <a href="#" ng-click="changeSource(item.name); closeSourceBar(); get_routes()" ng-repeat="item in places">{{item.name}}</a>
+           <a href="javascript:void(0);" class="icon" ng-click="toggleSourceBar()">&#9776;</a>
         </div>
-        <div class="row">
-          <div class="btn-group-justified">
-            <label class="btn btn-primary" ng-model="destModel.value" ng-click="getCurrentLocation(); get_routes()" uib-btn-radio="'current location'" ng-click="getCurrentLocation()">Current Location</label>
-            <label class="btn btn-primary" ng-model="destModel.value" ng-click="get_routes()" uib-btn-radio="'{{item.name}}'" ng-repeat="item in places">{{item.name}}</label>
-          </div>
+        <p>Choose Destination:</p>
+        <div class="btn-group-justified nav-desktop">
+          <label class="btn btn-primary btn-lg" ng-model="destModel.value" ng-click="getCurrentLocation(); get_routes()" uib-btn-radio="'current location'">Current Location</label>
+          <label class="btn btn-primary btn-lg" ng-model="destModel.value" ng-click="get_routes()" uib-btn-radio="'{{item.name}}'" ng-repeat="item in places">{{item.name}}</label>
+        </div>
+        <div class="btn-group nav-mobile" uib-dropdown is-open="dest-button.isopen">
+          <button id="dest-button" type="button" class="btn btn-primary btn-lg" uib-dropdown-toggle ng-disabled="disabled">{{destModel.value}}<span class="caret"></span></button>
+          <ul class="uib-dropdown-menu" role="menu" aria-labelledby="dest-button">
+            <li role="menutitem">
+              <a href="#" ng-click="changeDest('current location'); getCurrentLocation(); get_routes()">Current Location</a>
+              <a href="#" ng-click="changeDest(item.name); get_routes()" ng-repeat="item in places">{{item.name}}</a>
+            </li>
+          </ul>
+        </div>
+        <div class="topnav" id="destNav">
+           <a href="#" ng-click="changeDest('current location'); closeDestBar(); getCurrentLocation(); get_routes()">Current Location</a>
+           <a href="#" ng-click="changeDest(item.name); closeDestBar(); get_routes()" ng-repeat="item in places">{{item.name}}</a>
+           <a href="javascript:void(0);" class="icon" ng-click="toggleDestBar()">&#9776;</a>
+        </div>
       </div>
 
       <div class="container">  <!-- results table -->
-        <div class="row">
-          <h4>Route from {{sourceModel.value}} to {{destModel.value}}:</h4>
-        </div>
+        <h4>Route from {{sourceModel.value}} to {{destModel.value}}:</h4>
         <div class="table-responsive">
           <table class="table table-bordered table-striped">
             <thead>
