--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           <button id="dest-button" type="button" class="btn btn-primary btn-lg" uib-dropdown-toggle ng-disabled="disabled">{{destModel.value}}<span class="caret"></span></button>
           <ul class="uib-dropdown-menu" role="menu" aria-labelledby="dest-button">
             <li role="menutitem">
-              <a href="#" ng-click="changeDest('current location'); getCurrentLocation(); get_routes()">Current Location</a>
-              <a href="#" ng-click="changeDest(item.name); get_routes()" ng-repeat="item in places">{{item.name}}</a>
+              <a href="#" class="btn btn-primary btn-lg" ng-click="changeDest('current location'); getCurrentLocation(); get_routes()">Current Location</a>
+              <a href="#" class="btn btn-primary btn-lg" ng-click="changeDest(item.name); get_routes()" ng-repeat="item in places">{{item.name}}</a>
             </li>
           </ul>
         </div>
